# projekt2

pro22/projekcikTP2/: BibliotekaZmiennych.h  CMakeLists.txt  CMakePresets.json  ObszarTestow.cpp  ToryToryProjekt  ToryToryProjekt.cpp  test.cpp
